--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     },
     "dependencies": {
         "async": "^3.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^22.7.7"
     }
 }
